<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.UpdateProductActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbarUpdate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ScrollView
      android:id="@+id/scrollView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbarUpdate"
      app:layout_constraintVertical_bias="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/imageViewUpdate"
          android:layout_width="400dp"
          android:layout_height="400dp"
          android:layout_gravity="center"
          android:layout_marginTop="16dp"
          android:background="@drawable/ic_baseline_image_24"
          android:contentDescription="@string/product_image"
          android:scaleType="centerCrop" />

      <TextView
          android:id="@+id/textViewUpdateImage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="8dp"
          android:text="@string/update_image" />

      <EditText
          android:id="@+id/editTextUpdateProductName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:ems="10"
          android:hint="@string/update_product_name"
          android:inputType="textPersonName" />

      <EditText
          android:id="@+id/editTextUpdatePrice"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:ems="10"
          android:hint="@string/update_product_price"
          android:inputType="numberDecimal" />

      <EditText
          android:id="@+id/editTextUpdateDescriptionShort"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:ems="10"
          android:hint="@string/update_description_short"
          android:inputType="textPersonName" />

      <EditText
          android:id="@+id/editTextUpdateDescription"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:ems="10"
          android:hint="@string/update_description"
          android:inputType="textPersonName" />

      <Spinner
          android:id="@+id/spinnerUpdateCategory"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="8dp"
          android:background="@drawable/rectangular_field" />

    </LinearLayout>
  </ScrollView>
  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/buttonUpdateCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:text="@string/update_cancel" />

    <Button
        android:id="@+id/buttonUpdateUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:text="@string/update_update" />

  </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>